--- a/clash/clash_rule_set.ini
+++ b/clash/clash_rule_set.ini
@@ -30,12 +30,12 @@ ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/quantumultx/rule/proxy.list
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`.*
+
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]♻️ 自动选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]♻️ 自动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
