--- a/clash/clash_rule_set.ini
+++ b/clash/clash_rule_set.ini
@@ -1,40 +1,26 @@
 [custom]
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/clash/IP-CIDR.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/clash/proxy.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/clash/proxy/IP-CIDR.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/clash/proxy/proxy.list
+
 ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/clash/CN-IP-CIDR.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/clash/direct.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/rangluwme/rule/main/clash/reject.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/clash/direct/CN-IP-CIDR.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/clash/direct/direct.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/clash/direct/directs.list
 
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/rangluwme/rule/main/clash/reject/reject.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+
+ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 国外媒体`select`[]♻️ 自动选择`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]♻️ 自动选择`[]DIRECT
-custom_proxy_group=🛑 广告拦截`select`[]REJECT
+custom_proxy_group=🛑 全球拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]DIRECT
 
 enable_rule_generator=true
