--- a/clash.ini
+++ b/clash.ini
@@ -1,5 +1,5 @@
 [custom]
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/rangluwme/rule/main/reject/reject.list
+# ruleset=🛑 全球拦截,https://raw.githubusercontent.com/rangluwme/rule/main/reject/reject.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/rangluwme/rule/main/reject/AD_Block.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/rangluwme/rule/main/reject/AD_Block_Plus.list
 
