--- a/clash.ini
+++ b/clash.ini
@@ -1,23 +1,11 @@
 [custom]
 
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
-
-ruleset=🎯 全球直连,[]GEOIP,LAN
-ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/direct/direct.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/direct/CN-IP-CIDR.list
-
+; ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/direct/CN-IP-CIDR.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/proxy/proxy.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/proxy/IP-CIDR.list
-
+; ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/proxy/IP-CIDR.list
 ruleset=🐟 漏网之鱼,[]FINAL
-
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🛑 全球拦截`select`[]REJECT
 custom_proxy_group=🎯 全球直连`select`[]♻️ 自动选择`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]♻️ 自动选择`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]DIRECT
