--- a/clash.ini
+++ b/clash.ini
@@ -1,8 +1,6 @@
 [custom]
-; ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/direct/direct.list
-; ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/proxy/proxy.list
-ruleset=🎯 全球直连,direct/direct.list
-ruleset=🌍 国外媒体,proxy/proxy.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/direct/direct.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/proxy/proxy.list
 ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]♻️ 自动选择`[]DIRECT
