--- a/tool/quan.conf
+++ b/tool/quan.conf
@@ -88,7 +88,7 @@ https://raw.githubusercontent.com/rangluwme/rule/main/proxy.list, tag=Proxy, for
 
 [filter_local]
 ip-cidr, 10.0.0.0/8, Direct mode
-final, Final
+final, 🌽 Final
 
 //强制分流走蜂窝网络
 ;host-suffix, googleapis.com, proxy, force-cellular
