--- a/tool/quan.conf
+++ b/tool/quan.conf
@@ -67,28 +67,26 @@ server = /*.netease.com/119.29.29.29
 server = /*.mi.com/119.29.29.29
 server = /*.xiaomi.com/119.29.29.29
 [policy]
+static=🍟 Traffic Mode, 🌽 Traffic Network, 🧧 Proxy Network, img-url=paperplane.circle.fill.system
+static=💥 Proxy Mode, proxy, 🧧  Proxy Network, img-url=paperplane.circle.fill.system
+ssid = 🏠 SSID Mode, 🌽 Traffic Network, direct, ZJUWLAN: direct, eduroam: direct
+url-latency-benchmark=🌽 Traffic Network, server-tag-regex=长沙|江苏|华南|北京|上海|广西, check-interval=600, tolerance=0, alive-checking=true
+static=🧧  Proxy Network, server-tag-regex=香港, check-interval=600, tolerance=0, alive-checking=true
 
-static=🍟 Direct mode, direct, 🌽 Unlimited Traffic Network, 🧧 Unlimited Proxy Network, img-url=paperplane.circle.fill.system
-static=💥 Proxy mode, proxy, 🧧 Unlimited Proxy Network, img-url=paperplane.circle.fill.system
-static=🌽 Final, Direct mode, 💥 Proxy mode, img-url=paperplane.circle.fill.system
-url-latency-benchmark=🌽 Unlimited Traffic Network, server-tag-regex=长沙|江苏|华南|北京|上海|广西, check-interval=600, tolerance=0, alive-checking=true
-static=🧧 Unlimited Proxy Network, server-tag-regex=香港, check-interval=600, tolerance=0, alive-checking=true
-ssid = 🏠 SSID Group, 🌽 Unlimited Traffic Network, direct, ZJUWLAN: direct, eduroam: direct
 [server_remote]
-https://zhuan.mlsao.xyz/auto/?url=https%3A%2F%2Fzhuan.mlsao.xyz%2Fsub%2F%3Fair_url%3Dhttps%253A%252F%252Fmayiyun.club%252Fapi%252Fv1%252Fclient%252Fsubscribe%253Ftoken%253D544cf05e3b14b89fe2dcfa859ca37f29%26host%3Dpuui.qpic.cn%26dereplication%3Dtrue%26addtoip%3Dtrue, tag=Unlimited Network, update-interval=600, opt-parser=true, enabled=true
+https://zhuan.mlsao.xyz/auto/?url=https%3A%2F%2Fzhuan.mlsao.xyz%2Fsub%2F%3Fair_url%3Dhttps%253A%252F%252Fmayiyun.club%252Fapi%252Fv1%252Fclient%252Fsubscribe%253Ftoken%253D544cf05e3b14b89fe2dcfa859ca37f29%26host%3Dpuui.qpic.cn%26dereplication%3Dtrue%26addtoip%3Dtrue, tag= Network, update-interval=600, opt-parser=true, enabled=true
 
 [server_local]
 
 [filter_remote]
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=Apple, force-policy=💥 Proxy mode, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/AppleNews/AppleNews.list, tag=Apple news, force-policy=💥 Proxy mode, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=Apple, force-policy=💥 Proxy Mode, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/AppleNews/AppleNews.list, tag=Apple news, force-policy=💥 Proxy Mode, update-interval=172800, opt-parser=true, enabled=true
 
-https://raw.githubusercontent.com/rangluwme/rule/main/direct.list, tag=Direct, force-policy=🏠 SSID Group, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/rangluwme/rule/main/proxy.list, tag=Proxy, force-policy=💥 Proxy mode, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/rangluwme/rule/main/direct.list, tag=Direct, force-policy=🏠 SSID Mode, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/rangluwme/rule/main/proxy.list, tag=Proxy, force-policy=💥 Proxy Mode, update-interval=172800, opt-parser=true, enabled=true
 
 [filter_local]
-ip-cidr, 10.0.0.0/8, Direct mode
-final, 🌽 Final
+final, 💥 Proxy Mode
 
 //强制分流走蜂窝网络
 ;host-suffix, googleapis.com, proxy, force-cellular
