--- a/tool/quan.conf
+++ b/tool/quan.conf
@@ -67,9 +67,9 @@ server = /*.netease.com/119.29.29.29
 server = /*.mi.com/119.29.29.29
 server = /*.xiaomi.com/119.29.29.29
 [policy]
-static=🍟 Traffic Mode, 🌽 Traffic Network, 🧧 Proxy Network, img-url=paperplane.circle.fill.system
+static=🍟 Direct Mode, 🌽 Traffic Network, 🧧 Proxy Network, img-url=paperplane.circle.fill.system
 static=💥 Proxy Mode, proxy, 🧧 Proxy Network, img-url=paperplane.circle.fill.system
-ssid = 🏠 SSID Mode, 🍟 Traffic Mode, direct, ZJUWLAN: direct, eduroam: direct
+ssid = 🏠 SSID Mode, 🍟 Direct Mode, direct, ZJUWLAN: direct, eduroam: direct
 url-latency-benchmark=🌽 Traffic Network, server-tag-regex=长沙|江苏|华南|北京|上海|广西, check-interval=600, tolerance=0, alive-checking=true
 url-latency-benchmark=🧧 Proxy Network, server-tag-regex=香港, check-interval=600, tolerance=0, alive-checking=true
 
