--- a/pref.ini
+++ b/pref.ini
@@ -57,17 +57,14 @@ overwrite_original_rules=true
 update_ruleset_on_request=true
 ruleset=🍟 Direct Mode,rule/direct.list
 ruleset=💥 Proxy Mode,rule/proxy.list
-ruleset=🌽 Final Mode,[]FINAL
+ruleset=💥 Proxy Mode,[]FINAL
 
 [proxy_groups]
 custom_proxy_group=🍟 Direct Mode`select`[]DIRECT`[]☕ Domestic Traffic Network
 custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy Traffic Network`[]🙏 Selected Traffic Network
-custom_proxy_group=🌽 Final Mode`select`[]🍟 Direct Mode`[]💥 Proxy Mode
-
-custom_proxy_group=🙏 Selected Traffic Network`select`^((?!(港|HK|Hong Kong|新加坡|SG|上海|北京|江苏|华南|广西|安卓|更新)).)*$ 
 custom_proxy_group=🧧 Proxy Traffic Network`url-test`(港|HK|Hong Kong|新加坡|SG)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=☕ Domestic Traffic Network`url-test`(上海|北京|江苏|华南|广西)`http://www.gstatic.com/generate_204`300,,50
-
+custom_proxy_group=🙏 Selected Traffic Network`select`^((?!(港|HK|Hong Kong|新加坡|SG|上海|北京|江苏|华南|广西|安卓|更新)).)*$ 
 
 [template]
 template_path=
