--- a/tool/pref.ini
+++ b/tool/pref.ini
@@ -76,7 +76,6 @@ update_ruleset_on_request=true
 ;[] 前缀后的文字将被当作规则，而不是链接或路径，主要包含 []GEOIP 和 []MATCH(等同于 []FINAL)
 ;博主使用的策略如下：
 ruleset=💥 Proxy Mode,rule/proxy.list
-ruleset=🌍 Apple/Mircrosoft Traffic,rule/direct1.list
 ruleset=DIRECT,rule/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
 
@@ -94,11 +93,10 @@ ruleset=💥 Proxy Mode,[]FINAL
 ; custom_proxy_group=g3`select`!!GROUPID=0!!(香港|新加坡|HK|SG)
 ; 订阅链接中的第一条订阅内名字含 HGC、HKBN、PCCW、HKT、hk、港 的节点
 ; 
-custom_proxy_group=🌍 Apple/Mircrosoft Traffic`select`[]DIRECT`[]💥 Proxy Mode
-custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy1 Network`[]🍟 Proxy2 Network`[]🙏 Other Network
+custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy1 Network`[]🙏 Selected Network
 custom_proxy_group=🧧 Proxy1 Network`url-test`!!GROUPID=0!!(香港|新加坡|HK|SG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍟 Proxy2 Network`url-test`!!GROUPID=1!!(香港|新加坡|HK|SG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🙏 Other Network`url-test`(^((?!(香港|HK|新加坡|SG|上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡)).)*$)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🙏 Selected Network`url-test`(^((?!(香港|HK|Hong Kong|新加坡|SG|上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡)).)*$)`http://www.gstatic.com/generate_204`300,,50
+
 
 [template]
 template_path=
