--- a/tool/Mixin.yaml
+++ b/tool/Mixin.yaml
@@ -20,15 +20,28 @@ mixin: # Mixin 配置文件
       # 因此还加个兜底，这里随便加一个就行
       - 10.105.1.124
       - 10.105.1.122
-      - https://doh.pub/dns-query  
-      - https://dns.alidns.com/dns-query  
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+      - https://i.passcloud.xyz/dns-query
       # 之所以建议尽量不设置 fallback，因为使用 fallback 以后会 DNS 解析用时会大大延长，
       #从而影响整体 HTTP 延时，严重影响上网体验。如果受 DNS 污染所迫被迫设置 fallback，请尽可能选择速度快的 DoT 作为 fallback
     fallback: # GeoIP 不是 CN 时使用的 DNS NameServer（使用DoH/DoT）
       - https://dns.google/dns-query    # Google DoH
       - https://cloudflare-dns.com/dns-query
       - https://dns.quad9.net/dns-query
-      - tls://1.1.1.1:853
-      - tls://1.0.0.1:853
-      - https://101.6.6.6:8443/dns-query
-      - https://dns.tuna.tsinghua.edu.cn:8443/dns-query
+      - 1.1.1.1
+      - 8.8.8.8
+      - 9.9.9.9
+    fallback-filter:
+      geoip: false
+      ipcidr:
+        - 240.0.0.0/4
+        - 0.0.0.0/32
+        - 127.0.0.1/32
+  tun:
+    enable: true
+    stack: gvisor
+    dns-hijack:
+      - 198.18.0.2:53
+    auto-route: true
+    auto-detect-interface: true
