--- a/tool/Mixin.yaml
+++ b/tool/Mixin.yaml
@@ -1,44 +1,38 @@
 mixin: # Mixin 配置文件
-  dns:
-    enable: true 
-    listen: 0.0.0.0:53
-    ipv6: true # true/false 是否启用 ipv6 支持 
-    # 从 v0.18.8 版本开始，TUN 模式建议使用 fake-ip 模式，redir-host 将无法进行远端 DNS 解析
-    enhanced-mode: fake-ip # redir-host/fake-ip
-    fake-ip-range: 198.18.0.1/16
-    use-hosts: true # 查询 hosts 并返回 IP 记录
-    # 这个配置影响不大，主要是用来解析后面 nameserver 里面的网址的
-    default-nameserver: # 用于 DoH/DoT 的 Bootstrap Server
-      # 默认使用学校的 DNS 来解析，防止一些校内服务解析成公网 DNS 值，导致无法访问
-      # - 10.10.0.21
-      # - 10.10.2.53
-      - 223.5.5.5
-      - 8.8.8.8
-    nameserver-policy:
-      '+.zju.edu.cn': '10.105.1.124'
-      '+.cc98.org': '10.105.1.124'
-    nameserver: # GeoIP 为 CN 时使用的 DNS NameServer（使用DoH/DoT）
-      # 同时注意可能发生 WIFI 切换的情况，切换之后 10.10.0.21 就不能用了，
-      # 因此还加个兜底，这里随便加一个就行
-      - https://doh.pub/dns-query
-      - https://dns.alidns.com/dns-query
-      - https://i.passcloud.xyz/dns-query
-      # 之所以建议尽量不设置 fallback，因为使用 fallback 以后会 DNS 解析用时会大大延长，
-      #从而影响整体 HTTP 延时，严重影响上网体验。如果受 DNS 污染所迫被迫设置 fallback，请尽可能选择速度快的 DoT 作为 fallback
-    fallback: # GeoIP 不是 CN 时使用的 DNS NameServer（使用DoH/DoT）
-      - https://dns.google/dns-query    # Google DoH
-      - https://cloudflare-dns.com/dns-query
-      - https://dns.quad9.net/dns-query
-    fallback-filter:
-      geoip: false
-      ipcidr:
-        - 240.0.0.0/4
-        - 0.0.0.0/32
-        - 127.0.0.1/32
   tun:
     enable: true
     stack: gvisor
-    dns-hijack:
-      - 198.18.0.2:53
     auto-route: true
     auto-detect-interface: true
+    dns-hijack:
+      - any:53
+  dns:
+    enable: true
+    listen: 0.0.0.0:53
+    ipv6: true
+    enhanced-mode: fake-ip
+    fake-ip-range: 198.18.0.1/16
+    use-hosts: true
+    default-nameserver:
+      - 223.5.5.5
+      - 1.1.1.1
+    nameserver-policy:
+      '+.zju.edu.cn': '10.105.1.124'
+      '+.cc98.org': '10.105.1.124'
+    nameserver:
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+    fallback:
+      - https://worldwide.passcloud.xyz/dns-query 
+      - https://a.passcloud.xyz/dns-query
+      - https://i.passcloud.xyz/dns-query
+      # - https://dns.google/dns-query
+      # - https://cloudflare-dns.com/dns-query
+    fallback-filter:
+      geoip: true
+      geoip-code: CN
+      ipcidr:
+        - 240.0.0.0/4
+        - 0.0.0.0/32
+        - 127.0.0.1/8
+
