--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -1,11 +1,9 @@
 [custom]
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/rangluwme/rule/main/direct/direct.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/rangluwme/rule/main/proxy/proxy.list
-ruleset=🐟 漏网之鱼,[]FINAL
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]♻️ 自动选择`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]♻️ 自动选择`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]DIRECT
+custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy1 Network`[]🙏 Selected Network
+custom_proxy_group=🧧 Proxy1 Network`url-test`!!GROUPID=0!!(香港|新加坡|HK|SG)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🙏 Selected Network`url-test`(^((?!(香港|HK|Hong Kong|新加坡|SG|上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡)).)*$)`http://www.gstatic.com/generate_204`300,,50
+ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct/direct.list
+ruleset=💥 Proxy Mode,[]FINAL
 enable_rule_generator=true
 overwrite_original_rules=true
 
