--- a/tool/pref.ini
+++ b/tool/pref.ini
@@ -75,7 +75,7 @@ update_ruleset_on_request=true
 ;type留空时默认为surge类型的规则
 ;[] 前缀后的文字将被当作规则，而不是链接或路径，主要包含 []GEOIP 和 []MATCH(等同于 []FINAL)
 ;博主使用的策略如下：
-ruleset=💥 Proxy Mode,rule/proxy.list
+; ruleset=💥 Proxy Mode,rule/proxy.list
 ruleset=DIRECT,rule/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
 
