--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -1,9 +1,9 @@
 [custom]
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
-custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy1 Network`[]🙏 Selected Network
-custom_proxy_group=🧧 Proxy1 Network`url-test`(香港|新加坡|HK|SG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🙏 Selected Network`url-test`(^((?!(香港|HK|Hong Kong|新加坡|SG|上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡)).)*$)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy Data
+custom_proxy_group=🧧 Proxy Data`url-test`(香港|HK|Hong Kong|新加坡|SG|台湾|TW)`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=🧧 Proxy Network`url-test`(^((?!(上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡|安徽)).)*$)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
 
