--- a/tool/Mixin.yaml
+++ b/tool/Mixin.yaml
@@ -12,27 +12,29 @@ mixin: # Mixin 配置文件
     ipv6: true
     enhanced-mode: fake-ip
     fake-ip-range: 198.18.0.1/16
-    use-hosts: true
-    default-nameserver:
-      - 223.5.5.5
-      - 1.1.1.1
+    use-hosts: true # 查询 hosts 并返回 IP 记录
     nameserver-policy:
       '+.zju.edu.cn': '10.105.1.124'
       '+.cc98.org': '10.105.1.124'
+      '+.cc98.top': '10.105.1.124'
+    default-nameserver:
+      - 223.5.5.5
+      - 1.1.1.1
     nameserver:
       - https://doh.pub/dns-query
       - https://dns.alidns.com/dns-query
     fallback:
-      - https://worldwide.passcloud.xyz/dns-query 
+      - https://worldwide.passcloud.xyz/dns-query
       - https://a.passcloud.xyz/dns-query
       - https://i.passcloud.xyz/dns-query
-      # - https://dns.google/dns-query
       # - https://cloudflare-dns.com/dns-query
-    fallback-filter:
+      # - https://dns.google/dns-query
+    fallback-filter: #开启之后，fallback才会生效，符合条件的IP会使用fallback解析，实际测试下来速度会很慢，此时可以把nameserver里面的DNS放到fallback里面
+    # 但是这样就跟原来不开启fallback-filter是一样的。
+    # 所以在dns污染的时候可以开启fallback和fallback-filter 选项，默认不开启就可以了。Alidns对于国内外域名解析是一流的，可以放心使用。
       geoip: true
       geoip-code: CN
       ipcidr:
-        - 240.0.0.0/4
-        - 0.0.0.0/32
-        - 127.0.0.1/8
-
+         - 240.0.0.0/4
+         - 0.0.0.0/32
+         - 127.0.0.1/32
