--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -2,7 +2,8 @@
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
 ;custom_proxy_group=💥 Proxy Mode`select`[]🧧 Proxy Data
-custom_proxy_group=💥 Proxy Mode`url-test`(香港|新加坡|台湾)`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 Proxy Mode`url-test`((?!.*(测试)).*(香港|新加坡|台湾))`http://www.apple.com/library/test/success.html`100,,50
 ;custom_proxy_group=🧧 Proxy Network`url-test`(^((?!(上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡|安徽)).)*$)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
+
