--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -1,7 +1,7 @@
 [custom]
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
-custom_proxy_group=💥 Proxy Mode`select`((?!.*(测试)).*(香港|新加坡|台湾))`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 Proxy Mode`select`((?!.*(测试)).*(香港|新加坡))`http://www.apple.com/library/test/success.html`100,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
