--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -3,7 +3,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
 custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network
 custom_proxy_group=💥 Auto Network`url-test`((?!.*(测试)).*(香港|新加坡))`http://www.apple.com/library/test/success.html`100,,50
-custom_proxy_group=💥 IEPL Network`url-test`((?!.*(测试)).*([IEPL]))`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 enable_rule_generator=true
 overwrite_original_rules=true
 
