--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -1,7 +1,7 @@
 [custom]
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 ruleset=💥 Proxy Mode,[]FINAL
-custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network
+custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network`[]DIRECT
 custom_proxy_group=💥 Auto Network`url-test`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
 custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 enable_rule_generator=true
