--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -26,7 +26,7 @@ ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/mast
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
 ruleset=💥 Proxy Mode,[]FINAL
 
-custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network
+custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network`[]DIRECT`[]REJECT
 custom_proxy_group=💥 Auto Network`url-test`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
 custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 
