--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -27,7 +27,7 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Mode,[]FINAL
 
 custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network`[]DIRECT`[]REJECT
-custom_proxy_group=💥 Auto Network`url-test`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 Auto Network`select`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
 custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]💥 Proxy Mode
