--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -11,8 +11,8 @@ ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/maste
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=📃 ZJU Scholar,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=📃 ZJU Scholar,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
@@ -29,7 +29,7 @@ ruleset=💥 Proxy Mode,[]FINAL
 custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network`[]DIRECT`[]REJECT
 custom_proxy_group=💥 Auto Network`select`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
 custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
-
+custom_proxy_group=📃 ZJU Scholar`select`[]DIRECT`[]💥 Proxy Mode
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]💥 Proxy Mode
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]💥 Proxy Mode
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]💥 Proxy Mode
