--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -4,21 +4,16 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyList.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyListChina.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaDomain.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Download.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/Bilibili.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaMedia.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/GoogleFCM.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
+
+ruleset=GoogleCN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
+ruleset=ChinaIp,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
+ruleset=ChinaCompanyIp,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
+ruleset=ZJU,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=ZJU-More-Scholar,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=GoogleFCM,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/GoogleFCM.list
+ruleset=OneDrive,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
+ruleset=Microsoft,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
+ruleset=Apple,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Telegram.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/YouTube.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
@@ -28,7 +23,15 @@ ruleset=💥 Proxy Mode,[]FINAL
 custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network
 custom_proxy_group=💥 Auto Network`select`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
 custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
-
+custom_proxy_group=GoogleCN`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=ChinaCompanyIp`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=ChinaIp`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=ZJU`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=ZJU-More-Scholar`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=GoogleFCM`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=OneDrive`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=Microsoft`url-test`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=Apple`url-test`http://www.apple.com/library/test/success.html`100,,50
 enable_rule_generator=true
 overwrite_original_rules=true
 
