--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -13,11 +13,10 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
+ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Telegram.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/YouTube.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
-ruleset=DIRECT,[]GEOIP,LAN
-ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Mode,[]FINAL
 custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network`[]💥 IEPL Network
 custom_proxy_group=💥 Auto Network`select`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
