--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -6,9 +6,9 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/GoogleFCM.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
+ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Telegram.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/YouTube.list
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
