--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -16,7 +16,7 @@ ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/mast
 ruleset=💥 Proxy Mode,[]FINAL
 
 
-custom_proxy_group=💥 Proxy Mode`url-test`((?!.*(测试|IEPL)).*(香港))`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 Proxy Mode`url-test`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|HK|TW|SG))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network
 enable_rule_generator=true
