--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -9,14 +9,16 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/OneDrive.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/tool/direct.list
+
+ruleset=💥 Microsoft,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
 ruleset=💥 Proxy Mode,[]FINAL
 
 
 custom_proxy_group=💥 Proxy Mode`url-test`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|日本|韩国|HK|TW|SG|KR|JP))`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 Microsoft`select`[]DIRECT`[]💥 Proxy Mode
 ; custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network
 enable_rule_generator=true
