--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -13,7 +13,7 @@ ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/mast
 ruleset=💥 Proxy Mode,[]FINAL
 
 
-custom_proxy_group=💥 Proxy Mode`seclect`[]💥 Proxy network`.*`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|日本|韩国|HK|TW|SG|KR|JP))
+custom_proxy_group=💥 Proxy Mode`seclect`[]💥 Proxy network`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|日本|韩国|HK|TW|SG|KR|JP))
 custom_proxy_group=💥 Proxy network`url-test`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|日本|韩国|HK|TW|SG|KR|JP))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network
