--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -11,6 +11,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/tool/direct.list
 
 ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
+ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Mode,[]FINAL
 
 
