--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -5,8 +5,8 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyListChina.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
 
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=💥 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=💥 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaDomain.list
@@ -18,7 +18,7 @@ ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Mode,[]FINAL
 
-
+custom_proxy_group=💥 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
 custom_proxy_group=💥 Proxy Mode`url-test`((?!.*(测试|IEPL)).*(香港|新加坡|狮城|HK|SG))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 Proxy Network`select`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|日本|韩国|HK|TW|SG|KR|JP))
 ; custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
