--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -13,13 +13,13 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/tool/direct.list
 
-ruleset=💥 Proxy Mode,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
+ruleset=💥 Proxy Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
 ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
-ruleset=💥 Proxy Mode,[]FINAL
+ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=💥 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=💥 Proxy Mode`url-test`((?!.*(测试|IEPL)).*(香港|新加坡|狮城|HK|SG))`http://www.apple.com/library/test/success.html`100,,50
+custom_proxy_group=💥 Proxy Network`url-test`((?!.*(测试|IEPL)).*(香港|新加坡|狮城|HK|SG))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 Proxy Network`select`((?!.*(测试|IEPL)).*(香港|台湾|新加坡|日本|韩国|HK|TW|SG|KR|JP))
 ; custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
 ; custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network
