--- a/tool/clash.ini
+++ b/tool/clash.ini
@@ -19,12 +19,7 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=💥 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=💥 Proxy Network`select`((?!.*(测试|IEPL)).*(香港|新加坡|狮城|HK|SG))
+custom_proxy_group=💥 Proxy Network`select`(香港|新加坡|狮城|HK|SG)
 ; custom_proxy_group=💥 IEPL Network`url-test`((香港).*(IEPL))`http://www.apple.com/library/test/success.html`100,,50
-; custom_proxy_group=💥 Proxy Mode`select`[]💥 Auto Network
 enable_rule_generator=true
 overwrite_original_rules=true
-
-;custom_proxy_group=🧧 Proxy Network`url-test`(^((?!(上海|北京|江苏|华南|广西|安卓|更新|河南|湖北|新疆停机卡|安徽)).)*$)`http://www.gstatic.com/generate_204`300,,50
-
-
