--- a/clash.ini
+++ b/clash.ini
@@ -19,10 +19,9 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=💥 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点
+custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|JP|Japan)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|kr|Korea|KOR|首尔|韩|韓)`http://www.apple.com/library/test/success.html`300,,50
