--- a/clash.ini
+++ b/clash.ini
@@ -19,9 +19,9 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=💥 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇨🇳 台湾
-custom_proxy_group=🇭🇰 香港`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇨🇳 台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇸🇬 狮城`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 Hongkong`[]🇸🇬 Singapore`[]🇨🇳 Taiwan
+custom_proxy_group=🇭🇰 Hongkong`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇸🇬 Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇨🇳 Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
