--- a/clash.ini
+++ b/clash.ini
@@ -18,7 +18,7 @@ ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
-custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)`[]💥 Proxy Network
+custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
 custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国
 custom_proxy_group=🇭🇰 香港`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`100,,50
