--- a/clash.ini
+++ b/clash.ini
@@ -4,6 +4,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyList.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyListChina.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
+ruleset=REJECT,https://raw.githubusercontent.com/rangluwme/rule/main/reject.list
 
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
