--- a/clash.ini
+++ b/clash.ini
@@ -6,6 +6,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Telegram.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/YouTube.list
+ruleset=REJECT,https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Rules/Services/SNS/Weibo.list
 ruleset=REJECT,https://raw.githubusercontent.com/rangluwme/rule/main/reject.list
 
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
