--- a/clash.ini
+++ b/clash.ini
@@ -4,9 +4,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyList.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyListChina.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
-ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Telegram.list
-ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Ruleset/YouTube.list
-ruleset=REJECT,https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Rules/Services/SNS/Weibo.list
+
 
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
@@ -16,9 +14,8 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaDomain.list
+ruleset=DIRECT,https://raw.githubusercontent.com/Mythologyli/ZJU-Rule/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
-ruleset=DIRECT,[]GEOIP,LAN
-ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
