--- a/clash.ini
+++ b/clash.ini
@@ -4,6 +4,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
 ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=🏫 ZJU,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
@@ -11,9 +12,15 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
+
+ruleset=💥 Proxy Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
+ruleset=💥 Proxy Network,https://raw.githubusercontent.com/Mythologyli/ZJU-Rule/master/Clash/ProxyLite.list
+ruleset=DIRECT,[]GEOIP,LAN
+ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
+custom_proxy_group=🏫 ZJU`select`(ZJU|浙大|内网)
 custom_proxy_group=💥 Proxy Network`url-test`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`10,,50
