--- a/clash.ini
+++ b/clash.ini
@@ -18,11 +18,11 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy,[]FINAL
 
 ;custom_proxy_group=🏫 ZJUWLAN`select`[]DIRECT
-custom_proxy_group=💥 Proxy`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾
+custom_proxy_group=💥 Proxy`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇺🇲 美国
 custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇨🇳 台湾`url-test`(台湾|TW|Taiwan)`http://www.apple.com/library/test/success.html`10,,50
 ;custom_proxy_group=🇯🇵 日本`url-test`(日本|[^-]日|JP|Japan)`http://www.apple.com/library/test/success.html`100,,50
-;custom_proxy_group=🇺🇲 美国`url-test`(美|美国|US|United States)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇺🇲 美国`url-test`(美|美国|US|United States)`http://www.apple.com/library/test/success.html`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
