--- a/directlist.yaml
+++ b/directlist.yaml
@@ -40,6 +40,7 @@ payload:
   - DOMAIN-SUFFIX,ascelibrary.org
   - DOMAIN-KEYWORD,onetrust
   - DOMAIN-KEYWORD,serialssolution
+  - DOMAIN-KEYWORD,scopus
   
   - DOMAIN-KEYWORD,rangluw
   - DOMAIN-KEYWORD,caixin
