--- a/directlist.yaml
+++ b/directlist.yaml
@@ -21,12 +21,6 @@ payload:
   - DOMAIN-SUFFIX,duxiu.com
   - DOMAIN-SUFFIX,wanfangdata.com.cn
   - DOMAIN-SUFFIX,tandfonline.com
-  - DOMAIN-KEYWORD,journal
-  - DOMAIN-KEYWORD,science
-  - DOMAIN-KEYWORD,nature
-  - DOMAIN-KEYWORD,springer
-  - DOMAIN-KEYWORD,sciencedirect
-  - DOMAIN-KEYWORD,elsevier
   - DOMAIN-SUFFIX,iwaponline.com
   - DOMAIN-SUFFIX,wiley.com
   - DOMAIN-SUFFIX,ieee.org
@@ -35,12 +29,20 @@ payload:
   - DOMAIN-SUFFIX,clarivate.com
   - DOMAIN-SUFFIX,ascelibrary.org
   - DOMAIN-SUFFIX,jstor.org
-  - DOMAIN-KEYWORD,onetrust
-  - DOMAIN-KEYWORD,serialssolution
-  - DOMAIN-KEYWORD,scopus
   - DOMAIN-SUFFIX,verifystore.com
   - DOMAIN-SUFFIX,libsyn.com
   - DOMAIN-SUFFIX,acs.org
+  - DOMAIN-SUFFIX,engineeringvillage.com
+  - DOMAIN-KEYWORD,journal
+  - DOMAIN-KEYWORD,science
+  - DOMAIN-KEYWORD,nature
+  - DOMAIN-KEYWORD,springer
+  - DOMAIN-KEYWORD,sciencedirect
+  - DOMAIN-KEYWORD,elsevier
+  - DOMAIN-KEYWORD,onetrust
+  - DOMAIN-KEYWORD,serialssolution
+  - DOMAIN-KEYWORD,scopus
+
   # Domains
   - DOMAIN-KEYWORD,rangluw
   - DOMAIN-KEYWORD,caixin
