--- a/rejectlist.yaml
+++ b/rejectlist.yaml
@@ -4,9 +4,9 @@ payload:
   - DOMAIN-KEYWORD,sensor
   - DOMAIN-KEYWORD,analytics 
   - DOMAIN-KEYWORD,adservice
-  - DOMAIN-SUFFIX,log-global.aliyuncs.com
   - DOMAIN-KEYWORD,logitechg
-  - DOMAIN-SUFFIX,adobe.com
+  - DOMAIN-KEYWORD,adobe
+  - DOMAIN-SUFFIX,log-global.aliyuncs.com
   - DOMAIN-SUFFIX,error.taobao.com
   - DOMAIN-SUFFIX,err.taobao.com
   - IP-CIDR,224.0.0.0/8
