--- a/directlist.yaml
+++ b/directlist.yaml
@@ -53,6 +53,7 @@ payload:
   - DOMAIN-KEYWORD,outlook
   - DOMAIN-KEYWORD,office
   - DOMAIN-KEYWORD,cc98
+  - DOMAIN-KEYWORD,zju
   - DOMAIN-KEYWORD,ttxixi
   - DOMAIN-KEYWORD,icloud
   - DOMAIN-KEYWORD,apple
