--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -19,6 +19,7 @@ payload:
   - DOMAIN-KEYWORD,whatsapp
   - DOMAIN-KEYWORD,youtube
   - DOMAIN-KEYWORD,ytimg
+  - DOMAIN-KEYWORD,ggpht
   - DOMAIN-SUFFIX,wiktionary.org
   - DOMAIN-SUFFIX,wikimedia.org
   - DOMAIN-KEYWORD,amazon
