--- a/directlist.yaml
+++ b/directlist.yaml
@@ -193,3 +193,24 @@ payload:
 
   - DOMAIN-SUFFIX,cn
   - DOMAIN-KEYWORD,-cn
+
+  
+  - IP-CIDR,183.0.0.0/10
+  - IP-CIDR,183.64.0.0/13
+  - IP-CIDR,183.78.160.0/21
+  - IP-CIDR,183.78.180.0/22
+  - IP-CIDR,183.81.172.0/22
+  - IP-CIDR,183.81.180.0/22
+  - IP-CIDR,183.84.0.0/15
+  - IP-CIDR,183.91.128.0/22
+  - IP-CIDR,183.91.136.0/21
+  - IP-CIDR,183.91.144.0/20
+  - IP-CIDR,183.92.0.0/14
+  - IP-CIDR,183.128.0.0/11
+  - IP-CIDR,183.160.0.0/13
+  - IP-CIDR,183.168.0.0/15
+  - IP-CIDR,183.170.0.0/16
+  - IP-CIDR,183.172.0.0/14
+  - IP-CIDR,183.182.0.0/19
+  - IP-CIDR,183.184.0.0/13
+  - IP-CIDR,183.192.0.0/10
